Better spacing/font sizes. Fix to 8 grids per row. Set zoom by default. Add grids in between existing grids. Zoom to point broken right now

--- a/src/client/less/ChordGridView.less
+++ b/src/client/less/ChordGridView.less
@@ -1,10 +1,9 @@
 .chordGridView {
     text-align: left;
     display: inline-block;
-    padding: 5px;
+    padding: 20px 10px 5px 5px;
     position: relative;
     border: 1px transparent solid;
-    width: 140px;
 
     transition-property: top, left, box-shadow;
     transition-duration: 0.25s, 0.25s, 0.25s;
@@ -20,27 +19,33 @@
     }
     input.chordName {
         display: block;
-        width: 80px;
         position: relative;
-        left: 40px;
+        left: 15px;
+        width: 150px;
         text-align: center;
+        font-size: 24px;
+        &:focus {
+            background-color: white;
+        }
+        z-index: 2;
     }
     input.fretNumber {
         clear: both;
         display: inline;
-        width: 32px;
+        width: 37px;
         vertical-align: top;
         position: absolute;
         text-align: right;
-        padding-right: 13px;
-        top: 35px;
-        left: 0px;
+        padding-right: 10px;
+        top: 57px;
+        left: 5px;
         z-index: 3;
+        font-size: 24px;
     }
     svg {
         cursor: crosshair;
         position: relative;
-        left: 15px;
+        left: 30px;
     }
     .deleteBtn {
         position: absolute;
@@ -56,5 +61,25 @@
             display: inline;
         }
         border: 1px gray dashed;
+    }
+
+    .insertRegion {
+        position: absolute;
+        top: 0;
+        left: 175px;
+        width: 40px;
+        height: 100%;
+        .insertBtn {
+            display: none;
+            position: relative;
+            top: 100px;
+            width: 40px;
+            height: 40px;
+        }
+        &:hover {
+            .insertBtn {
+                display: block;
+            }
+        }
     }
 }
